examples/bad/17-lambda.tx
fun main(): Void {
  var a: (Int) -> Int = (parameter: Int) => {
    return parameter + 1;
  };

  return;
}
